# requestica

./: LICENSE  README.md  pyproject.toml
requestica/: __init__.py  __version__.py  _internal_utils.py  adapters.py  api.py  auth.py  compat.py  cookies.py  exceptions.py  hooks.py  models.py  sessions.py  status_codes.py  structures.py  utils.py
