[project]
name = "requestica"
version = "0.1.0"
description = "An Requests alternative written with Pydantic"
authors = [
    {name = "Siddhesh Agarwal",email = "siddhesh.agarwal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "certifi (>=2025.4.26,<2026.0.0)",
    "idna (>=3.10,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
